<resources>
// vectical
    <string name="app_name">StrehaVladCalc</string>

    <string name="buttonClearAll">C</string>
    <string name="button7">7</string>
    <string name="button4">4</string>
    <string name="button1">1</string>
    <string name="button0">0</string>

    <string name="buttonDivide">/</string>
    <string name="button8">8</string>
    <string name="button5">5</string>
    <string name="button2">2</string>
    <string name="button00">00</string>

    <string name="buttonMultiply">*</string>
    <string name="button9">9</string>
    <string name="button6">6</string>
    <string name="button3">3</string>
    <string name="buttonPoint">.</string>

    <string name="buttonBackspace">\u21FD</string>
    <string name="buttonMinus">-</string>
    <string name="buttonPlus">+</string>
    <string name="buttonEqual">=</string>

//  horizontal

    <string name="buttonSqrt">\u221A</string>
    <string name="buttonSin">sin</string>
    <string name="buttonCos">cos</string>
    <string name="buttonTan">tan</string>
    <string name="buttonPi">\u03C0</string>

    <string name="buttonCloseParenthesis">)</string>
    <string name="buttonxY">x\u005Ey</string>
    <string name="buttonx2">x\u00B2</string>
    <string name="buttonE">e</string>
    <string name="button1X">1/x</string>

    <string name="buttonOpenParenthesis">(</string>
    <string name="buttonLog">log</string>
    <string name="buttonLn">ln</string>
    <string name="buttonAbs">|x|</string>
    <string name="buttoneX">e\u005Ex</string>




</resources>