<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myBlack"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/expressionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:textSize="30pt"
            android:gravity="bottom|right"
            android:textColor="@color/myUnsaturatedBlue"
            >

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/buttonClearAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonClearAll"
                style="@style/ExtensiveButtons"
                >
            </Button>
            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button7"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button4"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button1"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button0"
                style="@style/ButtonDig">
            </Button>

        </LinearLayout>
<!--        -->
<!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonMultiply"
                style="@style/ButtonOp"
                >
            </Button>
            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button8"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button5"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button2"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button00"
                style="@style/ButtonDig">
            </Button>
        </LinearLayout>
<!--        -->
<!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonDivide"
                style="@style/ButtonOp"
                >
            </Button>
            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button9"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button6"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button3"
                style="@style/ButtonDig">
            </Button>
            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonPoint"
                style="@style/ButtonOp">
            </Button>
        </LinearLayout>
<!--        -->
<!--        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <Button
                    android:id="@+id/buttonBackspace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/buttonBackspace"
                    style="@style/ButtonOp">
                </Button>
                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/buttonMinus"
                    style="@style/ButtonOp">
                </Button>
                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/buttonPlus"
                    style="@style/ButtonOp">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3">
                <Button
                    android:id="@+id/buttonEqual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buttonEqual"
                    style="@style/ButtonOp">
                </Button>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>